--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,9 +8,16 @@
   --background-end-rgb: 255, 255, 255;
 
   --primary-color: #04b8f4;
+  --primary-color-light: #b7edff;
+  --secondary-color: #6e7881;
 
-  --button-primary-color: #04b8f4;
+
+  --button-primary-color: var(--primary-color);
   --button-primary-active-color: #16afe3;
+
+
+  --button-secondary-color: var(--secondary-color);
+  --button-secondary-active-color: #555b60;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -19,10 +26,6 @@
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
-}
-
-body {
-
 }
 
 .bg-primary {
@@ -37,6 +40,10 @@ body {
   @apply text-white bg-[var(--button-primary-color)] active:bg-[var(--button-primary-active-color)]
 }
 
+.btn-secondary {
+  @apply text-white bg-[var(--button-secondary-color)] active:bg-[var(--button-secondary-active-color)]
+}
+
 .label {
   @apply block text-sm font-medium leading-6 text-gray-900
 }
@@ -48,3 +55,43 @@ body {
 .helper-error {
   @apply text-xs text-red-400 mt-1
 }
+
+.form-group {
+  @apply mb-4
+}
+
+.class:focus { overflow: hidden; }
+
+div:where(.swal2-container) button:where(.swal2-styled).swal2-default-outline:focus {
+  outline: none !important;
+  box-shadow: none !important;
+}
+
+
+/* ::-webkit-scrollbar {
+  width: 2px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  margin-left: 2px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #AAA;
+  border-radius: 10px;
+}
+
+::-moz-scrollbar {
+  width: 10px;
+}
+
+::-moz-scrollbar-track {
+  background: #f1f1f1;
+  margin-left: 2px;
+}
+
+::-moz-scrollbar-thumb {
+  background: #AAA;
+  border-radius: 10px;
+} */
