--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -95,3 +95,8 @@ div:where(.swal2-container) button:where(.swal2-styled).swal2-default-outline:fo
   background: #AAA;
   border-radius: 10px;
 } */
+
+.sale-product-report .mini-boxes {
+  display: flex;
+  justify-content: space-between;
+}
